# use-presence

./: .gitlab-ci.yml  .gitleaks.toml  .taplo.toml  .trivyignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASE.md  RELEASING.md  release-plz.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: advisory-rust-quality.yml  cargo-audit.yml  cargo-deny.yml  ci.yml  codeql.yml  facade-publish-readiness.yml  mirror.yml  publish-readiness.yml  pull-request.yml  release-plz-pr.yml  release-plz-release.yml  sbom.yml  secrets.yml  trivy.yml
.gitlab/issue_templates/: bug.md  feature.md
.gitlab/merge_request_templates/: default.md
crates/use-attribution/: Cargo.toml  README.md
crates/use-attribution/src/: lib.rs
crates/use-campaign/: Cargo.toml  README.md
crates/use-campaign/src/: lib.rs
crates/use-canonical/: Cargo.toml  README.md
crates/use-canonical/src/: lib.rs
crates/use-geo/: Cargo.toml  README.md
crates/use-geo/src/: lib.rs
crates/use-listing/: Cargo.toml  README.md
crates/use-listing/src/: lib.rs
crates/use-local/: Cargo.toml  README.md
crates/use-local/src/: lib.rs
crates/use-metadata/: Cargo.toml  README.md
crates/use-metadata/src/: lib.rs
crates/use-presence/: Cargo.toml  README.md
crates/use-presence/examples/: local_listing.rs  page_metadata.rs  referrer_classification.rs  service_area_geo.rs  utm_campaign.rs
crates/use-presence/src/: lib.rs  prelude.rs
crates/use-presence/tests/: facade.rs
crates/use-referrer/: Cargo.toml  README.md
crates/use-referrer/src/: lib.rs
crates/use-robots/: Cargo.toml  README.md
crates/use-robots/src/: lib.rs
crates/use-schema/: Cargo.toml  README.md
crates/use-schema/src/: lib.rs
crates/use-seo/: Cargo.toml  README.md
crates/use-seo/src/: lib.rs
crates/use-sitemap/: Cargo.toml  README.md
crates/use-sitemap/src/: lib.rs
crates/use-utm/: Cargo.toml  README.md
crates/use-utm/src/: lib.rs
scripts/: bootstrap-dev-tools.ps1  bootstrap-dev-tools.sh  sync-mirrors.sh
