[package]
name = "use-attribution"
description = "Attribution and touchpoint label primitives for RustUse presence utilities"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-attribution"
keywords = ["attribution", "touchpoint", "conversion", "campaign", "rustuse"]
categories = ["data-structures"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
