[package]
name = "use-canonical"
description = "Canonical URL and duplicate-surface primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-canonical"
keywords = ["canonical", "url", "hreflang", "redirect", "rustuse"]
categories = ["web-programming", "data-structures"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
