[package]
name = "use-metadata"
description = "Page metadata and social preview primitives for RustUse presence utilities"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-metadata"
keywords = ["metadata", "opengraph", "twitter", "preview", "rustuse"]
categories = ["web-programming", "data-structures"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true