[package]
name = "use-sitemap"
description = "Sitemap entry primitives and XML-safe formatting helpers for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-sitemap"
keywords = ["sitemap", "xml", "url", "metadata", "rustuse"]
categories = ["web-programming", "parser-implementations"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
