[package]
name = "use-utm"
description = "UTM parameter parsing and formatting primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-utm"
keywords = ["utm", "campaign", "url", "query", "rustuse"]
categories = ["web-programming", "parser-implementations"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
